--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<h2>Trần Huỳnh Nhựt Quang (Design front end)</h2>
+	<h2>
+		Trần Huỳnh Nhựt Quang (Design front end)
+		<img src="images/anhdaidien.jpg" alt="anhdaidien">
+	</h2>
 	<hr/>
 	<div class="thongtin">
 		<b>Tên:</b> <i>Trần Huỳnh Nhựt Quang</i>
