thay doi kich thuoc anh nho hon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h2>
-		Trần Huỳnh Nhựt Quang (Design front end)
+		Trần Huỳnh Nhựt Quang (Design front end)<br/>
 		<img src="images/anhdaidien.jpg" alt="anhdaidien">
 	</h2>
 	<hr/>
