--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+
+	<a href="index.html">Quay lại trang chủ</a>
+	<a href="gallery.html">Xem gallery</a>
 	<h2>
 		Trần Huỳnh Nhựt Quang (Design front end)<br/>
 		<img src="images/anhdaidien.jpg" alt="anhdaidien">
